Fix scss layout bug

--- a/frontend/src/MainPage/MainPage.scss
+++ b/frontend/src/MainPage/MainPage.scss
@@ -52,16 +52,14 @@
 		align-items: center;
 		flex-direction: column;
 
-		.mood-buttons {
+		>.mood-buttons {
 			margin: 2em 0;
 			display: flex;
 			justify-content: space-evenly;
 		}
 
 		.user-picture-big {
-			margin-top: 20%;
-			margin-left: auto;
-			margin-right: auto;
+			margin-top: 10%;
 		}
 
 		.keyboard-shortcuts {
